    * 4223 FIX: Fixed possible g_host_attribute related AttributeError exception
    * 4224 FIX: Improved exception handling during WATO slave site activation
    * 4237 FIX: Fixed rendering of old timestamps...
    * 4231 FIX: Fixed broken host renaming when files are in var/check_mk/web

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address

    BI:
    * 4202 FIX: Availability now avoids pending states for times before new hosts or services were added...
    * 4009 FIX: Business intelligence: Multihost aggregations are no longer broken after a core restart

    Reporting & Availability:
    * 3652 FIX: Unbreak PDF exports...
    * 4267 FIX: PDF export of filtered alert statistics view was always empty

    Event Console:
    * 4154 Do not send notifications if host found and currently in downtime...
            NOTE: Please refer to the migration notes!
    * 4276 Actions can now access the event macros via environment variables...
    * 4277 Script actions: New event macro ORIG_HOST...
    * 4155 FIX: Do not perform actions on events if overflow limit is active...
    * 4156 FIX: Fix off-by-one error in EC limit handling...
    * 4199 FIX: Fix detection of replication mode if EC is distributed...
    * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...
    * 4219 FIX: Trap processing with community "public" is now only default and not accepted in all cases anymore...
            NOTE: Please refer to the migration notes!

    HW/SW-Inventory:
    * 4258 FIX: snmp_extended_info: fixed undefined variable


1.4.0i3:
    Core & Setup:
    * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...
    * 4078 FIX: Fixed handling of hosts with non resolvable IP addresses during runtime...

    Checks & Agents:
    * 3988 Windows agent: new global option disabled_sections...
    * 3989 Logwatch patterns: now able to change state of context lines...